# parallel-data-compression-and-decompression

./: .gitignore  CMakeLists.txt  README.md  compression.c  compression.cpp  concurrence_queue.h  decompression.c  decompression.cpp  decompression_m.c  decompression_m_zwz copy.c  decompression_m_zwz.c  decompression_m_zwz_.c  decompression_m_zwz_path.c  decompression_multi.c  file_sort.c  hashmap.c  main  main.c  main.cpp  process.h  process.hpp  processSizeFile.c  verification.c  verification.cpp
file_process/: file_sort.c  file_sort.cpp  file_tools.c  file_tools.cpp
temp/data/decompress/: sorted_files_by_size.txt
temp/data/output/: compressed_0.zwz
tmp/data/Screenshots/: 2.txt  Test.docx
tmp/data/decompress/: sorted_files_by_size.txt
tmp/data/decompress/bad/: 1.txt  SuperLong
tmp/data/decompress/f1/f11/f111/bad/: test.txt
tmp/data/output/: compressed_0.zwz
